[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resolve-error-mcp"
version = "0.2.0"
description = "MCP server for the Resolve agent error resolution API -- structured error recovery for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "United Ideas", email = "hello@8bitconcepts.com" },
]
keywords = ["mcp", "error-resolution", "ai-agents", "claude", "tool-use"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://resolve.arflow.io"
Repository = "https://github.com/unitedideas/resolve-mcp"
Issues = "https://github.com/unitedideas/resolve-mcp/issues"

[project.scripts]
resolve-error-mcp = "server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["."]
